--- a/short-answers/q2.md
+++ b/short-answers/q2.md
@@ -20,5 +20,6 @@ You can run this code of course, but try not to! Try to figure out the issue on 
 
 # Answer
 
+There is no 'return' before the response.json() syntax. So the promise .then evaluates to is empty. 
 
 # Teacher Feedback
