--- a/short-answers/q3.md
+++ b/short-answers/q3.md
@@ -4,17 +4,20 @@ Will the code work? Why or why not?
 
 ```js
 const getUsers = async () => {
-  const url = 'https://jsonplaceholder.typicode.com/users';
-  const users = await fetch(url).then(r => r.json()).catch((err) => []);
-  console.log(users)
+  const url = "https://jsonplaceholder.typicode.com/users";
+  const users = await fetch(url)
+    .then((r) => r.json())
+    .catch((err) => []);
+  console.log(users);
   return users;
-}
-getUsers()
+};
+getUsers();
 ```
 
 Again, running the code gives you the answer, so try to figure it out on your own first!
 
 # Answer
 
+The code can run, but it pretty much defeats the purpose of using async/await by using .then and .catch.
 
 # Teacher Feedback
