--- a/short-answers/q4.md
+++ b/short-answers/q4.md
@@ -7,15 +7,16 @@ const getUser = async (userId) => {
   const url = `https://jsonplaceholder.typicode.com/users/${userId}`;
   const response = await fetch(url);
   const users = await response.json();
-  console.log(users)
+  console.log(users);
   return users;
-}
-getUser(-1)
+};
+getUser(-1);
 ```
 
 Again, running the code gives you the answer, so try to figure it out on your own first!
 
 # Answer
 
+I don't think this would run, only because we're invoking it with the value of -1. The code will technically 'run' but it will evaluate to an empty promise.
 
 # Teacher Feedback
