--- a/short-answers/q1.md
+++ b/short-answers/q1.md
@@ -1,8 +1,9 @@
 # Question
+
 Using `async`/`await` over `.then`/`.catch` makes our code for handling promises much more readable. What are the ways in which `async`/`await` is more readable than `.then` and `.catch`?
 
 # Answer
 
-
+async/await allows us to avoid a problem known as 'callback hell' commonly ran into by using .then and .catch. Since those methods require you to use a callback function we can find ourselves looking through massive chunks of functions nested in functions which can get confusing.
 
 # Teacher Feedback
