--- a/short-answers/q2.md
+++ b/short-answers/q2.md
@@ -23,3 +23,7 @@ You can run this code of course, but try not to! Try to figure out the issue on 
 There is no 'return' before the response.json() syntax. So the promise .then evaluates to is empty. 
 
 # Teacher Feedback
+
+Yup!
+
+Score: 3/3
