--- a/short-answers/q3.md
+++ b/short-answers/q3.md
@@ -21,3 +21,7 @@ Again, running the code gives you the answer, so try to figure it out on your ow
 The code can run, but it pretty much defeats the purpose of using async/await by using .then and .catch.
 
 # Teacher Feedback
+
+No lie told! Make sure you extend on why it will run!
+
+Score: 2/3
