--- a/short-answers/q1.md
+++ b/short-answers/q1.md
@@ -7,3 +7,7 @@ Using `async`/`await` over `.then`/`.catch` makes our code for handling promises
 async/await allows us to avoid a problem known as 'callback hell' commonly ran into by using .then and .catch. Since those methods require you to use a callback function we can find ourselves looking through massive chunks of functions nested in functions which can get confusing.
 
 # Teacher Feedback
+
+Yes!
+
+Score: 3/3
