--- a/short-answers/q4.md
+++ b/short-answers/q4.md
@@ -20,3 +20,7 @@ Again, running the code gives you the answer, so try to figure it out on your ow
 I don't think this would run, only because we're invoking it with the value of -1. The code will technically 'run' but it will evaluate to an empty promise.
 
 # Teacher Feedback
+
+The function will run and it does evaluate...why might that be a problem? 
+
+Score: 2/3
